# sgChat-Client

./: .env.development  .env.production  .gitignore  LICENSE  README.md  electron-builder.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  srv-api-endpoint.md  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
.claude/agents/: PARITY_AGENT.md  QA_AGENT.md  parity-audit-state.md
e2e/: electron-fixture.ts  parity-components.spec.ts  parity-qa.spec.ts  parity-smoke.spec.ts  qa-admin.spec.ts  qa-auth.spec.ts  qa-bugfix-verify.spec.ts  qa-comprehensive.spec.ts  qa-deep-audit.spec.ts  qa-full-audit.spec.ts  qa-full.spec.ts  qa-helpers.ts  qa-messaging.spec.ts  qa-settings.spec.ts  qa-ui.spec.ts  qa-voice.spec.ts
pages/: setup.html
scripts/: build-main.mjs  dev.mjs  download-deepfilter.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src/api/: client.ts
src/layouts/: MainLayout.tsx
src/lib/: crypto.ts  customTheme.ts  dmVoiceService.ts  imageUtils.ts  socket.ts  soundService.ts  tauri.ts  timezones.ts  voiceService.ts
src/main/: api-proxy.ts  app-audio-capture.ts  auth.ts  crash-reporter.ts  crypto.ts  e2e-crypto.ts  e2e-keys.ts  electron-shim.js  electron-store.d.ts  electron-types.d.ts  index.ts  ipc.ts  protocol.ts  screen-sources.ts  shortcuts.ts  store.ts  tray.ts  update-checker.ts  window-state.ts
src/preload/: index.ts
(+309 files in other folders)
